--- a/config/config.json
+++ b/config/config.json
@@ -1,20 +1,16 @@
 {
   "development": {
-    "username": "brock",
-    "password": "Thesputnik1",
-    "database": "express_auth_development",
+    "database": "libros_app_development",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
-    "username": "brock",
-    "password": "Thesputnik1",
-    "database": "express_auth_test",
+    "database": "libros_app_test",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
-    "database": "express_auth_production",
+    "database": "libros_app_production",
     "host": "127.0.0.1",
     "dialect": "postgres"
   }
