--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-authentication",
+  "name": "express-bookshelf",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
@@ -13,6 +13,7 @@
     "supertest": "^4.0.2"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "connect-flash": "^0.1.1",
     "dotenv": "^8.2.0",
@@ -24,6 +25,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.4.1",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "serve-favicon": "^2.5.0"
   }
 }
