fixes development  database name

--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "database": "libros_app_development",
+    "database": "libros_app",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
