--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.4.1",
     "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0",
     "serve-favicon": "^2.5.0"
   }
 }
